{
  "version": 4,
  "terraform_version": "1.9.7",
  "serial": 23,
  "lineage": "26db38d6-f254-b1a8-f6b0-974a2feaa04d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "NAt-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09308011d89ee3d94",
            "arn": "arn:aws:ec2:us-east-1:250502052604:elastic-ip/eipalloc-09308011d89ee3d94",
            "association_id": "eipassoc-0bbe949f379ce29bb",
            "domain": "vpc",
            "id": "eipalloc-09308011d89ee3d94",
            "network_border_group": "us-east-1",
            "network_interface": "eni-047a41801600409c4",
            "private_dns": "ip-10-0-101-247.ec2.internal",
            "private_ip": "10.0.101.247",
            "public_dns": "ec2-3-213-103-82.compute-1.amazonaws.com",
            "public_ip": "3.213.103.82",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public-rt",
            "aws_route_table_association.rt-asociacion-publica",
            "aws_subnet.subred-publica",
            "aws_vpc.Desarrollo-web-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:250502052604:internet-gateway/igw-0d6d0706187c87fe7",
            "id": "igw-0d6d0706187c87fe7",
            "owner_id": "250502052604",
            "tags": {
              "Name": "internet_gateway"
            },
            "tags_all": {
              "Name": "internet_gateway"
            },
            "vpc_id": "vpc-01b29d248c08247d3"
          },
          "dependencies": [
            "aws_vpc.Desarrollo-web-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09308011d89ee3d94",
            "association_id": "eipassoc-0bbe949f379ce29bb",
            "connectivity_type": "public",
            "id": "nat-0380b599de7227982",
            "network_interface_id": "eni-047a41801600409c4",
            "private_ip": "10.0.101.247",
            "public_ip": "3.213.103.82",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0822381fffd01f592",
            "tags": {
              "Name": "NAT gateway"
            },
            "tags_all": {
              "Name": "NAT gateway"
            }
          },
          "dependencies": [
            "aws_eip.NAt-gateway",
            "aws_internet_gateway.igw",
            "aws_route_table.public-rt",
            "aws_route_table_association.rt-asociacion-publica",
            "aws_subnet.subred-publica",
            "aws_vpc.Desarrollo-web-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "nat-gateway-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:250502052604:route-table/rtb-024fea731591b5c8d",
            "id": "rtb-024fea731591b5c8d",
            "owner_id": "250502052604",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0380b599de7227982",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Tabla Enrutamiento para el NAT gateway"
            },
            "tags_all": {
              "Name": "Tabla Enrutamiento para el NAT gateway"
            },
            "timeouts": null,
            "vpc_id": "vpc-01b29d248c08247d3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.NAt-gateway",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat-gateway",
            "aws_route_table.public-rt",
            "aws_route_table_association.rt-asociacion-publica",
            "aws_subnet.subred-publica",
            "aws_vpc.Desarrollo-web-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:250502052604:route-table/rtb-02032466141a5a3f1",
            "id": "rtb-02032466141a5a3f1",
            "owner_id": "250502052604",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d6d0706187c87fe7",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Tabla Enrutamiento para Internet gateway"
            },
            "tags_all": {
              "Name": "Tabla Enrutamiento para Internet gateway"
            },
            "timeouts": null,
            "vpc_id": "vpc-01b29d248c08247d3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.Desarrollo-web-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt-asociacion-publica",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-055680e8f747efe15",
            "route_table_id": "rtb-02032466141a5a3f1",
            "subnet_id": "subnet-0822381fffd01f592"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public-rt",
            "aws_subnet.subred-publica",
            "aws_vpc.Desarrollo-web-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subred-privada",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:250502052604:subnet/subnet-04bc952a329ac63ea",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04bc952a329ac63ea",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "250502052604",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subred-privada"
            },
            "tags_all": {
              "Name": "subred-privada"
            },
            "vpc_id": "vpc-01b29d248c08247d3"
          },
          "dependencies": [
            "aws_vpc.Desarrollo-web-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subred-publica",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:250502052604:subnet/subnet-0822381fffd01f592",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0822381fffd01f592",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "250502052604",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subred-publica"
            },
            "tags_all": {
              "Name": "subred-publica"
            },
            "vpc_id": "vpc-01b29d248c08247d3"
          },
          "dependencies": [
            "aws_vpc.Desarrollo-web-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Desarrollo-web-VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:250502052604:vpc/vpc-01b29d248c08247d3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07f1f563c456685f1",
            "default_route_table_id": "rtb-068c219a4c5078782",
            "default_security_group_id": "sg-08b969fdb826d77a8",
            "dhcp_options_id": "dopt-0d5c4275442d0c4ac",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01b29d248c08247d3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-068c219a4c5078782",
            "owner_id": "250502052604",
            "tags": {
              "Name": "VPC"
            },
            "tags_all": {
              "Name": "VPC"
            }
          }
        }
      ]
    }
  ]
}